==> c-demir/PCA9685/Core/Src/PCA9685.c <==
#include "PCA9685.h"
#include <assert.h>
#include "stm32f4xx_hal.h"
#include "math.h"
#include "main.h"
#define PCA9685_I2C_BASE_MODULE_ADDRESS (byte)0x40
#define PCA9685_I2C_BASE_MODULE_ADRMASK (byte)0x3F
#define PCA9685_I2C_BASE_PROXY_ADDRESS  (byte)0xE0
#define PCA9685_I2C_BASE_PROXY_ADRMASK  (byte)0xFE
#define PCA9685_MODE1_REG               (byte)0x00
#define PCA9685_MODE2_REG               (byte)0x01
#define PCA9685_SUBADR1_REG             (byte)0x02
#define PCA9685_SUBADR2_REG             (byte)0x03
#define PCA9685_SUBADR3_REG             (byte)0x04
#define PCA9685_ALLCALL_REG             (byte)0x05
#define PCA9685_LED0_REG                (byte)0x06          // Start of LEDx regs, 4B per reg, 2B on phase, 2B off phase, little-endian
#define PCA9685_PRESCALE_REG            (byte)0xFE
#define PCA9685_ALLLED_REG              (byte)0xFA
#define PCA9685_MODE1_RESTART           (byte)0x80
#define PCA9685_MODE1_EXTCLK            (byte)0x40
#define PCA9685_MODE1_AUTOINC           (byte)0x20
#define PCA9685_MODE1_SLEEP             (byte)0x10
#define PCA9685_MODE1_SUBADR1           (byte)0x08
#define PCA9685_MODE1_SUBADR2           (byte)0x04
#define PCA9685_MODE1_SUBADR3           (byte)0x02
#define PCA9685_MODE1_ALLCALL           (byte)0x01
#define PCA9685_MODE2_OUTDRV_TPOLE      (byte)0x04
#define PCA9685_MODE2_INVRT             (byte)0x10
#define PCA9685_MODE2_OUTNE_TPHIGH      (byte)0x01
#define PCA9685_MODE2_OUTNE_HIGHZ       (byte)0x02

void resetDevices()
{
#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
	printf("resetDevices\n\r");
#endif

MX_I2C1_Init();

#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
void checkForErrors ();
#endif
uint8_t address = 0x00;
byte A=PCA9685_SW_RESET;

HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(address<<1),&A,1, HAL_MAX_DELAY);
delay(1000);


}

void setPWMFrequency(float pwmFrequency) {
    if (pwmFrequency < 0 || _isProxyAddresser) return;

    // This equation comes from section 7.3.5 of the datasheet, but the rounding has been
    // removed because it isn't needed. Lowest freq is 23.84, highest is 1525.88.
    int preScalerVal = (25000000 / (4096 * pwmFrequency)) - 1;
    if (preScalerVal > 255) preScalerVal = 255;
    if (preScalerVal < 3) preScalerVal = 3;

#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
    printf("setPWMFrequency pwmFrequency: ");
    printf("%f",pwmFrequency);
    printf(", preScalerVal: 0x%X",preScalerVal);
    printf("%X\n",preScalerVal);
#endif

    // The PRE_SCALE register can only be set when the SLEEP bit of MODE1 register is set to logic 1.
    byte mode1Reg = readRegister(PCA9685_MODE1_REG);
    writeRegister(PCA9685_MODE1_REG, (mode1Reg = (mode1Reg & ~PCA9685_MODE1_RESTART) | PCA9685_MODE1_SLEEP));
    writeRegister(PCA9685_PRESCALE_REG, (byte)preScalerVal);

    // It takes 500us max for the oscillator to be up and running once SLEEP bit has been set to logic 0.
    writeRegister(PCA9685_MODE1_REG, (mode1Reg = (mode1Reg & ~PCA9685_MODE1_SLEEP) | PCA9685_MODE1_RESTART));
    HAL_Delay(500);
}

uint16_t getChannelPWM(int channel) {
    if (channel < 0 || channel > 15 || _isProxyAddresser) return 0;

    byte regAddress = PCA9685_LED0_REG + (channel << 2);

#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
    printf("getChannelPWM channel: ");
    printf(channel);
    printf(":,%X", regAddress);
    printf("%X",regAddress);
#endif




    if(HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&regAddress,1, HAL_MAX_DELAY)!=HAL_OK)
   {
#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
        checkForErrors();
#endif
        return 0;
    }

    int bytesRead = i2cWire_requestFrom((uint8_t)_i2cAddress, 4);
    if (bytesRead != 4) {
        while (bytesRead-- > 0)
            i2cWire_read();
#ifdef PCA9685_USE_SOFTWARE_I2C
        PCA9685_i2c_stop(); // Manually have to send stop bit in software i2c mode
#endif
        _lastI2CError = 4;
#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
        checkForErrors();
#endif
        return 0;
  }
#ifndef PCA9685_SWAP_PWM_BEG_END_REGS
    uint16_t phaseBegin = (uint16_t)i2cWire_read();
    phaseBegin |= (uint16_t)i2cWire_read() << 8;
    uint16_t phaseEnd = (uint16_t)i2cWire_read();
    phaseEnd |= (uint16_t)i2cWire_read() << 8;
#else
    uint16_t phaseEnd = (uint16_t)i2cWire_read();
    phaseEnd |= (uint16_t)i2cWire_read() << 8;
    uint16_t phaseBegin = (uint16_t)i2cWire_read();
    phaseBegin |= (uint16_t)i2cWire_read() << 8;
#endif

#ifdef PCA9685_USE_SOFTWARE_I2C
    PCA9685_i2c_stop(); // Manually have to send stop bit in software i2c mode
#endif

#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
    printf("  getChannelPWM phaseBegin: ");
    printf("%d",phaseBegin);
    printf(", phaseEnd: ");
    printf("%d",phaseEnd);
#endif

    // See datasheet section 7.3.3
    uint16_t retVal;
    if (phaseEnd >= PCA9685_PWM_FULL)
        // Full OFF
        // Figure 11 Example 4: full OFF takes precedence over full ON
        // See also remark after Table 7
        retVal = 0;
    else if (phaseBegin >= PCA9685_PWM_FULL)
        // Full ON
        // Figure 9 Example 3
        retVal = PCA9685_PWM_FULL;
    else if (phaseBegin <= phaseEnd)
        // start and finish in same cycle
        // Section 7.3.3 example 1
        retVal = phaseEnd - phaseBegin;
    else
        // span cycles
        // Section 7.3.3 example 2
        retVal = (phaseEnd + PCA9685_PWM_FULL) - phaseBegin;

#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
    printf("getChannelPWM retVal: ");
    printf("\n%d",retVal);
#endif

    return retVal;
}

void writeChannelBegin(int channel) {
    byte regAddress;

    if (channel != PCA9685_ALLLED_CHANNEL)
        regAddress = PCA9685_LED0_REG + (channel * 0x04);
    else
        regAddress = PCA9685_ALLLED_REG;

#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
    printf(" writeChannelBegin channel: ");
    printf("%d",channel);
    printf(", regAddress: 0x");
    printf("%X\n",regAddress);
#endif

    HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&regAddress,1, HAL_MAX_DELAY);
}

void writeChannelPWM(uint16_t phaseBegin, uint16_t phaseEnd) {
#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
    printf("  PCA9685::writeChannelPWM phaseBegin: ");
    printf("%d",phaseBegin);
    printf(", phaseEnd: ");
    printf("%d\n",phaseEnd);
#endif

#ifndef PCA9685_SWAP_PWM_BEG_END_REGS

    uint8_t phaseBegin_l, phaseBegin_h, phaseEnd_l,phaseEnd_h;

    phaseBegin_l = phaseBegin &0xFF;
    phaseBegin_h = phaseBegin &0xFF;
    phaseEnd_l = phaseEnd &0xFF;
    phaseEnd_h = phaseEnd &0xFF;


    HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&phaseBegin_l,1, HAL_MAX_DELAY);
    HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&phaseBegin_h,1, HAL_MAX_DELAY);
    HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&phaseEnd_l,1, HAL_MAX_DELAY);
    HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&phaseEnd_h,1, HAL_MAX_DELAY);

#else
       HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&phaseEnd_l,1, HAL_MAX_DELAY);
       HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&phaseEnd_h,1, HAL_MAX_DELAY);
       HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&phaseBegin_l,1, HAL_MAX_DELAY);
       HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&phaseBegin_h,1, HAL_MAX_DELAY);

#endif
}

byte readRegister(byte regAddress) {
#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
    printf(" readRegister regAddress: 0x");
    printf("%X",regAddress);
#endif

    if(HAL_I2C_Master_Transmit(&hi2c1,(uint16_t)(_i2cAddress<<1),&regAddress,1, HAL_MAX_DELAY)!=HAL_OK)
		{
#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
        checkForErrors();
#endif
        return 0;
    }

    int bytesRead = i2cWire_requestFrom((uint8_t)_i2cAddress, 1);
    if (bytesRead != 1) {
        while (bytesRead-- > 0)
            i2cWire_read();
#ifdef PCA9685_USE_SOFTWARE_I2C
        PCA9685_i2c_stop(); // Manually have to send stop bit in software i2c mode
#endif
        _lastI2CError = 4;
#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
        checkForErrors();
#endif
        return 0;
    }

    byte retVal = i2cWire_read();

#ifdef PCA9685_USE_SOFTWARE_I2C
    PCA9685_i2c_stop(); // Manually have to send stop bit in software i2c mode
#endif

#ifdef PCA9685_ENABLE_DEBUG_OUTPUT
    printf("   readRegister retVal: 0x");
    printf("%X",retVal);
#endif

    return retVal;
}
